--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.7.0",
+    "@types/react": "19.2.2",
     "eslint": "^9.32.0",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4"
