--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "motion": "^12.23.12",
-    "next": "15.3.3",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0"
